addons/ingress/traefik/manifests/gatewayclass.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

---

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-ingress-traefik
    helm.sh/chart: traefik-34.3.0
    app.kubernetes.io/managed-by: Helm
spec:
  controllerName: traefik.io/gateway-controller
