addons/ingress/traefik/manifests/namespace.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

apiVersion: v1
kind: Namespace
metadata:
  name: ingress-traefik
